--- a/TP1/joiners/factory/joiner_type/yearjoiner/config/config.yaml
+++ b/TP1/joiners/factory/joiner_type/yearjoiner/config/config.yaml
@@ -30,14 +30,14 @@ eof_queue_config: # queue of the eof manager
   name: "eof-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
 
 output_duplicates_handler_queue: # messages from Year Joiner to Duplicates Handler
   name: "yearjoiner-duplicateshandler-%s-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
 
 # Rollback idea
