--- a/TP1/joiners/factory/joiner_type/cityjoiner/config/config.yaml
+++ b/TP1/joiners/factory/joiner_type/cityjoiner/config/config.yaml
@@ -28,12 +28,12 @@ eof_queue_config: # queue of the eof manager
   name: "eof-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
 
 output_city_handler_queue: # messages from City Joiner to City Handler
   name: "cityjoiner-cityhandler-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
