--- a/TP1/queryhandlers/factory/handler_type/cityhandler/config/config.yaml
+++ b/TP1/queryhandlers/factory/handler_type/cityhandler/config/config.yaml
@@ -6,19 +6,19 @@ eof_queue_config: # queue of the eof manager
   name: "eof-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
 
 input_queue: # messages from City Joiner to City Handler
   name: "cityjoiner-cityhandler-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
 
 output_response_queue: # messages from City Handler to Server
   name: "response-queue"
   durable: true
   delete_when_unused: false
-  exclusive: true
+  exclusive: false
   no_wait: false
