+ Change client config: add some attributes
+ Add method to ask for the response of the queires

--- a/TP1/client/config/config.yaml
+++ b/TP1/client/config/config.yaml
@@ -3,6 +3,8 @@ end_batch_marker: "PING"
 fin_marker: "PONG"
 server_ack: "PONG"
 server_address: "server:12345"
+server_response_address: "server:6969"
+get_response_message: "queryresponses-PONG"
 packet_limit: 8192 # 8 * 1024
 csv_delimiter: ","
 data_delimiter: "|"
@@ -11,3 +13,4 @@ fin_ack_messages:
   - "weather-PONG"
   - "stations-PONG"
   - "trips-PONG"
+  - "queryresponses-PONG"
