Delete some logs and minor changes

--- a/TP1/eofmanager/config/config.yaml
+++ b/TP1/eofmanager/config/config.yaml
@@ -31,6 +31,9 @@ counters:
   city-joiner:
     montreal: 4
 
+  #distance-calculator:
+  #  montreal: 4
+
   rain-handler:
     nn: 1
 
@@ -49,6 +52,7 @@ responses:
 
   rain-joiner: ["rainjoiner-rainhandler-queue"]
   city-joiner: ["cityjoiner-cityhandler-%s-queue"]
+  #distance-calculator: ["distancecalculator-cityhandler-topic"]
   year-joiner: ["yearjoiner-duplicateshandler-%s-queue"]
 
   rain-handler: ["response-queue"]
