--- a/TP1/server/config/config.yaml
+++ b/TP1/server/config/config.yaml
@@ -1,4 +1,5 @@
 port: "12345"
+response_port: "6969"
 ip: "server"
 end_batch_marker: "PING"
 ack_message: "PONG"
@@ -10,6 +11,7 @@ fin_messages:
   - "weather-PONG"
   - "stations-PONG"
   - "trips-PONG"
+  - "queryresponses-PONG"
 
 rabbit_mq:
     weather:
@@ -39,4 +41,11 @@ rabbit_mq:
         internal: false
         no_wait: false
 
-# ToDo: add exchanges for other data types: stations and trips
+response_queue_config:
+  name: "response-queue"
+  durable: true
+  delete_when_unused: false
+  exclusive: false
+  no_wait: false
+
+eof_type: "EOF"
